--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "e-supplychain_node01",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -21,5 +20,6 @@
     "mysql2": "^3.7.1",
     "nodemon": "^3.0.3",
     "socket.io": "^4.7.4"
-  }
+  },
+  "description": ""
 }
