--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "moment-timezone": "^0.5.44",
+    "mysql": "^2.18.1",
     "mysql2": "^3.7.1",
     "nodemon": "^3.0.3",
     "socket.io": "^4.7.4"
